# booking

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  ruff.toml  tasks.md
app/: config.py  conftest.py  database.py  env.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: d5bce8699036_initial_migration.py
app/pages/: router.py
app/prometheus/: router.py
app/rooms/: dao.py  models.py  router.py  schemas.py
app/tasks/: celery.py  email_templates.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration_tests/test_bookings/: test_api_booking.py  test_dao_booking.py
app/tests/unit_tests/test_users/: test_api.py  test_dao.py
app/users/: auth.py  models.py  router.py
docker/: app.sh  celery.sh
