[project]
name = "fastapi-educ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[all]>=0.115.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
