[project]
name = "fastapi-educ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[all]>=0.115.6",
    "flower>=2.0.1",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "httpx==0.23",
]
