[project]
name = "fastapi-educ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[all]>=0.115.6",
    "flower>=2.0.1",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "pydantic-settings>=2.7.1",
    "python-jose>=3.3.0",
    "python-json-logger>=3.2.1",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "httpx==0.23",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "autoflake>=2.3.1",
    "pyright>=1.1.392.post0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true

[tool.pyright]
include = ["app"]
